force-app/main/default/objects/ClaimCoverage__c/ClaimCoverage__c.object-meta.xml
<CustomObject>
    <label>Claim Coverage</label>
    <nameField>
        <label>Claim Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>