force-app/main/default/objects/ClaimCoverage__c/fields/NatureEvaluation__c.field-meta.xml
<CustomField>
    <fullName>NatureEvaluation__c</fullName>
    <label>Nature d&apos;évaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indemnité principale</fullName>
            </value>
            <value>
                <fullName>Honoraires expert</fullName>
            </value>
            <value>
                <fullName>Honoraires avocat</fullName>
            </value>
            <value>
                <fullName>honoraires Médecin</fullName>
            </value>
            <value>
                <fullName>Honoraire enquêteur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>