force-app/main/default/objects/ClaimCoverage__c/fields/TypeEvaluation__c.field-meta.xml
<CustomField>
    <fullName>TypeEvaluation__c</fullName>
    <label>Type d&apos;évaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluation Matérielle</fullName>
            </value>
            <value>
                <fullName>Evaluation Corporelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>